# mod_xgeoip

./: ChangeLog  INSTALL.md  LICENSE  Makefile.am  README.md  bootstrap.sh  configure.ac
debian/: changelog  control  copyright  libapache2-mod-xgeoip.install  libapache2-mod-xgeoip.postinst  libapache2-mod-xgeoip.prerm  rules  xgeoip.conf  xgeoip.load
src/: Makefile.am  mod_xgeoip.c  mod_xgeoip.h
